Header and footer done

--- a/index.html
+++ b/index.html
@@ -1117,6 +1117,10 @@
         </ul>
   </div>
 
+    <div class="pattern-desc milli island" style="">
+      <div class="max-length"><p>The footer is for us to have copyright on the company and website.</p>
+</div>
+    </div>
 
   
 
@@ -1149,7 +1153,11 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="footer-footer-code-sample-copy-chunk">
+              <code><pre id="footer-footer-code-sample-copy-chunk">&lt;footer class="list micro footer gutter-1-2" role="contentinfo" tabindex="0"&gt;
+  &lt;div class="footer wrapper">
+    &lt;small class="micro">Garden Life &#xA9; 2018 233 Garden street.&lt;/small>
+  &lt;/div>
+&lt;/footer>
 </pre></code>
             </div>
           </div>
@@ -1530,21 +1538,21 @@
     <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Header</h2>
         <ul class="list-group-inline gutter absolute pin-cr">
             <li>
-              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="header--code-sample">
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="header-header-code-sample">
                 <i class="icon i-18">
                   <svg><use xlink:href="#icon-code"></use></svg>
                 </i>
               </button>
             </li>
             <li>
-              <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="header/" hidden>
+              <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="header/header" hidden>
                 <i class="icon i-18">
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
             </li>
             <li>
-              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/header/header.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
                 <i class="icon i-18">
                   <svg><use xlink:href="#icon-pop-out"></use></svg>
                 </i>
@@ -1556,6 +1564,64 @@
 
   
 
+    <div class="pattern-details " id="header--header" style="">
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/header/header.html" scrolling="no" onload="resizeIframe(this)"  ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="header-header-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#header-header-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="header-header-code-sample-copy-chunk">&lt;header class="masthead grid grid-middle island-1-2"&gt;
+  &lt;div class="logo unit xs-1 s-1 m-1 l-1-4">
+    &lt;h1 class="push-0 gutter-1-4 pad-b-1-4">Garden Life&lt;/h1>
+  &lt;/div>
+  &lt;nav class="nav unit xs-1 s-1 m-1 l-3-4">
+    &lt;ul class="list-group-inline push-0">
+      &lt;li class="island-1-8">
+        &lt;a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Home&lt;/a>
+      &lt;/li>
+      &lt;li class="island-1-8">
+        &lt;a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Products&lt;/a>
+      &lt;/li>
+      &lt;li class="island-1-8">
+        &lt;a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Contact&lt;/a>
+      &lt;/li>
+    &lt;/ul>
+  &lt;/nav>
+&lt;/header>
+
+&lt;div class="banner">
+  &lt;div class="banner-content wrapper pad-b gutter-1-2">
+    &lt;p class="push-0">some quote&lt;/p>
+  &lt;/div>
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
 
 </section>
 
