--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -12,6 +12,11 @@
   <link href="footer.css" rel="stylesheet">
 </head>
 <body>
+  <footer class="list micro footer gutter-1-2" role="contentinfo" tabindex="0">
+  <div class="footer wrapper">
+    <small class="micro">Garden Life © 2018 233 Garden street.</small>
+  </div>
+</footer>
 
 </body>
 </html>
