Add Headers, Footer, Button style, Search bar to pattern

--- a/patterns/navigation/page-navigation.html
+++ b/patterns/navigation/page-navigation.html
@@ -56,7 +56,7 @@
       <li>
         <a class="link-box valign-top buttons" href="#">
           <p class="inline">Next page</p>
-          <i class="icon i-32 icon-flip"><svg><use xlink:href="../../images/icons.svg#img-arrow-r"></use></svg></i>
+          <i class="icon i-32"><svg><use xlink:href="../../images/icons.svg#img-arrow-r"></use></svg></i>
         </a>
       </li>
 
