Changes to current file styles

--- a/patterns/banner/product-list-banner.html
+++ b/patterns/banner/product-list-banner.html
@@ -15,9 +15,9 @@
 <body>
   <div class="banner relative">
     <div class="filter-text-image-banner">
-      <div class="filter-text-box-banner absolute pin-lc gutter-2 wrapper">
+      <div class="gutter-2 wrapper home-text-box-banner absolute pin-tl">
        <h1 class="pad-t-2">Filtering your Rubik</h1>
-       <p class="island">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+       <p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
       </div>
     </div>
 
