--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -80,32 +80,110 @@
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
           </i>
         </div>
         <div class="patternbot-icon-display-right center-contents island-1-2">
           <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
           </i>
           <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
           </i>
           <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
           </i>
         </div>
       </div>
       <div class="text-center patternbot-color-body">
         <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#cart-empty" /></svg>
+          <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
         </i>
         <span class="icon-label ib">
           <code class="micro" style="">
-            #cart-empty
+            #facebook
           </code>
         </span>
         <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: cart-empty" aria-label="Copy icon: cart-empty" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#cart-empty&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: facebook" aria-label="Copy icon: facebook" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#facebook&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#cart" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #cart
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: cart" aria-label="Copy icon: cart" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#cart&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#footer-logo" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#footer-logo" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#footer-logo" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#footer-logo" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#footer-logo" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #footer-logo
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: footer-logo" aria-label="Copy icon: footer-logo" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#footer-logo&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
@@ -314,6 +392,45 @@
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #instagram
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: instagram" aria-label="Copy icon: instagram" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#instagram&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
             <svg><use xlink:href="../../images/icons.svg#qty-arrow" /></svg>
           </i>
         </div>
@@ -340,6 +457,84 @@
         </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: qty-arrow" aria-label="Copy icon: qty-arrow" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#qty-arrow&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #snapchat
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: snapchat" aria-label="Copy icon: snapchat" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#snapchat&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#search-bar" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#search-bar" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#search-bar" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#search-bar" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#search-bar" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #search-bar
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: search-bar" aria-label="Copy icon: search-bar" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#search-bar&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
@@ -418,6 +613,45 @@
         </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: toggle" aria-label="Copy icon: toggle" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#toggle&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#twitter" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#twitter" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#twitter" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#twitter" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#twitter" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #twitter
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: twitter" aria-label="Copy icon: twitter" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#twitter&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
