--- a/patterns/banner/home-banner.html
+++ b/patterns/banner/home-banner.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <div class="banner relative">
-    <div class="home-text-image-banner gutter-2">
-      <div class="gutter wrapper home-text-box-banner absolute pin-tl">
+    <div class="home-text-image-banner">
+      <div class="wrapper gutter-2 home-text-box-banner absolute pin-tl">
         <h1 class="pad-t-2">Home of the Rubik</h1>
         <p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
