--- a/patterns/navigation/tool-bars.html
+++ b/patterns/navigation/tool-bars.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Bread Crumbs</title>
+  <title>Tool Bar</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <div class="shadow-box grid pad-t-1-8 pad-b-1-8 tool-bar">
+  <div class="shadow-box grid pad-t-1-8 pad-b-1-8 tool-bar pad-t">
     <div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-left push-1-2">
       <ul class="list-group-inline gutter push-none">
         <li><a class="sign-register link-box" href="">Sign-in</a></li>
@@ -25,10 +25,10 @@
     <div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-right gutter-2">
       <ul class="list-group-inline push-none">
         <li><a class="link-box inline" href="#">EN - English</a></li>
-        <li>
-          <a class="link-box cart-btn icon i-34 relative" href="#">
-            <i class="icon i-32 absolute pin-tl cart-click"><svg><use xlink:href="../../images/icons.svg#cart-empty"></use></svg></i>
-            <i class="icon i-32 absolute pin-tl cart-clicked"><svg><use xlink:href="../../images/icons.svg#cart-item"></use></svg></i>
+        <li class="icon i-34 relative">
+          <a class="link-box cart-btn" href="#">
+            <i class="icon i-32 absolute cart-click"><svg><use xlink:href="../../images/icons.svg#cart"></use></svg></i>
+            <i class="icon i-32 absolute cart-clicked"><svg><use xlink:href="../../images/icons.svg#cart-item"></use></svg></i>
           </a>
         </li>
       </ul>
