--- a/index.html
+++ b/index.html
@@ -1561,6 +1561,10 @@
         </ul>
   </div>
 
+    <div class="pattern-desc milli island" style="">
+      <div class="max-length"><p>The header is for photos and links to other pages.</p>
+</div>
+    </div>
 
   
 
