--- a/patterns/brand/1-logos.html
+++ b/patterns/brand/1-logos.html
@@ -44,7 +44,7 @@
           <span class="patternbot-sub-heading block giga">Pattern Library</span>
       </h1>
       <div class="patternbot-brand-desc peta">
-          <p>Garden Life is a small buisness looking to make your gardening experience a better one.</p>
+          <p>Garden Life is a small business looking to make your gardening experience a better one. Garden life sells garden supplies and plants to help get peoples gardens started.</p>
 
       </div>
     </div>
