--- a/index.html
+++ b/index.html
@@ -839,18 +839,16 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="buttons-buttons-code-sample-copy-chunk">&lt;meta name="viewport" content="width=device-width,initial-scale=1"&gt;
-&lt;link href="../../common/modules.css" rel="stylesheet">
+              <code><pre id="buttons-buttons-code-sample-copy-chunk">&lt;link href="../../common/modules.css" rel="stylesheet"&gt;
 &lt;link href="../../common/grid.css" rel="stylesheet">
 &lt;link href="../../common/type.css" rel="stylesheet">
 &lt;link href="../../common/theme.css" rel="stylesheet">
 &lt;link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
 &lt;link href="buttons.css" rel="stylesheet">
 
-
 &lt;a class="btn text-center" href="#"> Standard Button&lt;/a>
-&lt;a class="btn btn-light text-center" href="#"> light Button&lt;/a>
-&lt;a class="btn-ghost text-center" href="#"> ghost Button&lt;/a>
+&lt;a class="btn btn-light text-center" href="#"> Light Button&lt;/a>
+&lt;a class="btn-ghost text-center" href="#"> Ghost Button&lt;/a>
 </pre></code>
             </div>
           </div>
