--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -5,7 +5,6 @@
   <title>Buttons</title>
 </head>
 <body>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
@@ -13,8 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="buttons.css" rel="stylesheet">
 </body>
-
   <a class= "btn text-center" href="#"> Standard Button</a>
-    <a class= "btn btn-light text-center" href="#"> light Button</a>
-    <a class= "btn-ghost text-center" href="#"> ghost Button</a>
+    <a class= "btn btn-light text-center" href="#"> Light Button</a>
+      <a class= "btn-ghost text-center" href="#"> Ghost Button</a>
 </html>
