--- a/patterns/cards/product-card.html
+++ b/patterns/cards/product-card.html
@@ -12,14 +12,14 @@
   <link href="cards.css" rel="stylesheet">
 </head>
 <body>
-    <a class="productcard island" href="#">
-      <div class="embed embed-1by1">
-        <img class="embed-item img-flex" src="https://placehold.it/20by40" alt="">
-      </div>
-      <div class="island-1-2 text-center">
-        <h3 class="push-0">Heres a product shot</h3>
-        <p class="italic">Pricing and other info</p>
-      </div>
-    </a>
-  </body>
+  <a class="productcard island" href="#">
+    <div class="embed embed-1by1">
+      <img class="embed-item img-flex" src="https://placehold.it/20by40" alt="">
+    </div>
+    <div class="island-1-2 text-center">
+      <h3 class="push-0">Heres a product shot</h3>
+      <p class="italic">Pricing and other info</p>
+    </div>
+  </a>
 </body>
+</html>
